--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
                 </div>
                 <div class="byline__box">
+                    <span>Author: Scotch</span>
                     <time>August 30, 2017</time>
                 </div>
             </div>
@@ -47,9 +48,9 @@
                     <!--Table of contents-->
                     <ul class="table-of-content">
                         <li><a href="#">Introduction</a></li>
-                        <li><a href="#"></a>Getting Started</li>
-                        <li><a href="#"></a>Implementing</li>
-                        <li><a href="#"></a>Conclusion</li>
+                        <li><a href="#">Getting Started</a></li>
+                        <li><a href="#">Implementing</a></li>
+                        <li><a href="#">Conclusion</a></li>
                     </ul>
 
                     <!--Sidebar Ads-->
@@ -66,6 +67,20 @@
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                     printer took a galley of type and scrambled it to make a type specimen book.</p>
 
+
+                <h2>Introduction</h2>
+
+                <pre>
+                    <code>
+                        &lt;ul class="table-of-content">
+                        &lt;li>&lt;a href="#">Introduction&lt;/a>&lt;/li>
+                        &lt;li>&lt;a href="#">Getting Started&lt;li>
+                        &lt;li>&lt;a href="#">Implementing&lt;li>
+                        &lt;li>&lt;a href="#">Conclusion&lt;li>
+                        &lt;/ul>
+                    </code>
+                </pre>
+
                 <p>
                     It has survived not only five centuries, but also the leap into electronic typesetting, remaining
                     essentially unchanged.
@@ -74,6 +89,10 @@
                     Ipsum.
                 </p>
             </div>
+        </div>
+
+        <div class="article-footer">
+
         </div>
 
     </article>
